--- a/Cau3.html
+++ b/Cau3.html
@@ -26,7 +26,7 @@
         return flag;
     }
     let n = parseInt(prompt('Nhập 1 số muốn kiểm tra'));
-    console.log(isFibonacci(n));
+    document.write(isFibonacci(n));
 </script>
 </body>
 </html>
